Wrapped the gallery in a FixedGrid from react-window This only renders the visible elements, which means better performance. Performance while scrolling is now a bit worse though since it loads images on the fly, but this should be resolved after we generate thumbnails for the images. Todo: The view methods besides the grid are not working and the grid elements are not resized yet in a narrow window as it did before

--- a/src/renderer/resources/style/content.scss
+++ b/src/renderer/resources/style/content.scss
@@ -2,6 +2,7 @@
 .gallery {
   width: 100%;
   padding: 8px;
+  height: 100%;
 }
 
 #query-overview {
@@ -15,6 +16,10 @@
 
 #query-overview .bp3-tag {
   margin: 0 0 0.5em 0.5em;
+}
+
+.gallery-content {
+  height: 100%;
 }
 
 /////////////////////// Thumbnail //////////////////////////////////
@@ -90,7 +95,7 @@
 
 
 /////////////////////// View methods //////////////////////////////////
-.list.thumbnail {
+.list .thumbnail {
   width: auto;
   height: 100%;
   display: -webkit-box;
@@ -106,7 +111,7 @@
     text-align: left !important;
   }
 }
-.grid.thumbnail {
+.grid .thumbnail {
   width: $thumbnail-size;
   height: $thumbnail-size;
   img {
@@ -119,7 +124,7 @@
     background: red !important;
   }
 }
-.slide.thumbnail {
+.slide .thumbnail {
   height: calc(100vh - 2.4rem) !important;
   width: 100% !important;
   margin: 0.4rem 0;
